# dndl

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  tmp.md
backend/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  wait-for-port.py
backend/app/: __main__.py
backend/app/config/: __init__.py  default.py  utils.py
backend/app/db/: alembic.ini
backend/app/db/alembic/: env.py
backend/app/db/alembic/versions/: 004194c64d86_.py  437824534429_.py  c59bfea12e0e_.py  cc47fff5107a_.py
backend/app/db/connection/: __init__.py  session.py
backend/app/db/versions/: 838093bdaa4a_.py
backend/app/endpoints/: __init__.py  character.py  files.py  healhCheck.py  pdf.py  user.py  video.py  yaGpt.py  ya_gpt.py
backend/app/models/: __init__.py  character.py  files.py  registration.py  user.py
backend/app/utils/: auth.py  files.py  pdf_creater.py  yaGpt.py  ya_gpt.py
backend/tests/: conftest.py  utils.py
backend/tests/test_functions.py/: test_question_gen.py
backend/tests/test_handlers/: test_article.py  test_files.py  test_health_check.py  test_user.py  test_video.py
backend/tests/test_handlers/data/: article_data.py
backend/tests/test_migrations/: test_stairway.py
frontend/: Dockerfile  docker-compose.yml  nuxt.config.ts  package.json
frontend/assets/css/: main.css
frontend/components/: WrapperModal.vue
frontend/components/editor/: CharacterAttacks.vue  CharacterEquipment.vue  CharacterFirstColumn.vue  CharacterHeader.vue  CharacterLanguage.vue  CharacterMainSpecification.vue  CharacterPerception.vue  CharacterSecondColumn.vue  CharacterThirdColumn.vue  CharacterVitality.vue  ImageUploader.vue
frontend/components/profile/: Character.vue  charactesTabs.vue  genderToggle.vue
frontend/components/ui/: CButton.vue  CInput.vue  CSelectableList.vue  CTextArea.vue
frontend/layouts/: default.vue  footer.vue  header.vue  notification.vue
frontend/pages/: login.vue  registration.vue
frontend/pages/character/: [id].vue
frontend/pages/editor/: index.vue
frontend/pages/forum/: [id].vue  index.vue  new-topic.vue
frontend/pages/manuals/: index.vue
frontend/pages/profile/: index.vue
frontend/pages/training-modules/: index.vue
