[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kcv204 <slavenikum13>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.6"
alembic = "^1.14.0"
yandex-cloud-ml-sdk = "^0.2.1"
uvicorn = "^0.32.1"
passlib = "^1.7.4"
pydantic-settings = "^2.6.1"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.19"
reportlab = "^4.2.5"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
